--- a/views/bookinstance_delete.jade
+++ b/views/bookinstance_delete.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content 
 
-    h1 #{title}: #{book_Instance}    
+    h1 #{title}: #{book_Instance.title}    
 
         p Do you really want to delete this Book Instance?
 
