--- a/views/genre_delete.jade
+++ b/views/genre_delete.jade
@@ -1,29 +1,29 @@
 extends layout
 
 block content
-  h1 #{title}: #{book.title}
+  h1 #{title}
   
 
-  if referenced_book_instances.length
+  if referenced_books.length
 
-    p #[strong Delete the following book instances before deleting this book!]
+    p #[strong Delete the following books before deleting this genre!]
 
     div(style='margin-left:20px;margin-top:20px')
 
-      h4 Book Instances
+      h4 Books
 
       dl
-      each book_instance in referenced_book_instances 
+      each book in referenced_books 
         dt
-          a(href=book_instance.url) Book Instance!
-        dd #{book_instance.status}
+          a(href=book.url) Book
+        dd #{book.title}
         
 
   else
-    p Do you really want to delete this book?
+    p Do you really want to delete this genre?
 
     form(method='POST' action='')
       div.form-group
-        input#bookid.form-control(type='hidden',name='bookid', required='true', value=book._id)
+        input#bookid.form-control(type='hidden',name='bookid', required='true', value=genre._id)
 
       button.btn.btn-primary(type='submit') Delete
